<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/whitebackground"
    tools:context=".Renew_password_notification">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="190sp"
        android:layout_height="190sp"
        android:background="@drawable/log"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.009" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="300sp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545">

        <TextView
            android:id="@+id/titu"
            android:layout_width="40sp"
            android:layout_height="20sp"
            android:layout_marginLeft="5sp"
            android:text="Hola!" />

        <TextView
            android:id="@+id/titu2"
            android:layout_width="200sp"
            android:layout_height="20sp"
            android:layout_marginTop="40sp"
            android:layout_marginLeft="5sp"
            android:text="¿Una nueva contraseña Juan?"
            android:textColor="@color/typography"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/titu3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="70sp"
            android:text="@string/txtrenew" />

        <Button
            android:id="@+id/btnNewPass"
            android:text="crear nueva contraseña"
            android:layout_width="wrap_content"
            android:layout_marginTop="125sp"
            android:layout_marginLeft="80sp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/titu4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="190sp"
            android:text="@string/txtrenew2" />

        <TextView
            android:id="@+id/titu5"
            android:layout_width="230sp"
            android:layout_height="20sp"
            android:layout_marginTop="240sp"
            android:layout_marginLeft="5sp"
            android:text="¿Tienes problemas para acceder?"
            android:textColor="@color/typography"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/titu6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="265sp"
            android:text="@string/txtrenew3" />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>